--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/js": "^7.3.67",
     "@mdi/react": "^1.6.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
